objects/Car_Inventory__c/Car_Inventory__c.object-meta.xml
<CustomObject>
    <label>Car Inventory</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Car Inventory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Car Inventories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>