objects/Car_Inventory__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <description>The model of the car (e.g., Civic, Camry, Mustang).</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Model</label>
    <length>180</length>
    <type>Text</type>
</CustomField>