objects/Car_Inventory__c/fields/Sedan_Transmission_Type__c.field-meta.xml
<CustomField>
    <fullName>Sedan_Transmission_Type__c</fullName>
    <description>The type of transmission used in the sedan (e.g., Automatic, Manual).</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Sedan Transmission Type</label>
    <length>180</length>
    <type>Text</type>
</CustomField>