objects/Car_Inventory__c/fields/SUV_Capacity__c.field-meta.xml
<CustomField>
    <fullName>SUV_Capacity__c</fullName>
    <description>The seating capacity of the SUV (e.g., 5-seater, 7-seater).</description>
    <encryptionScheme>None</encryptionScheme>
    <label>SUV Capacity</label>
    <length>180</length>
    <type>Text</type>
</CustomField>