objects/Car_Inventory__c/fields/VIN__c.field-meta.xml
<CustomField>
    <fullName>VIN__c</fullName>
    <description>The Vehicle Identification Number (VIN) of the car</description>
    <encryptionScheme>None</encryptionScheme>
    <label>VIN</label>
    <length>180</length>
    <type>Text</type>
</CustomField>