objects/Car_Inventory__c/listViews/SUV_Inventory.listView-meta.xml
<ListView>
    <fullName>SUV_Inventory</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Available</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Car_Inventory__c.SUV</value>
    </filters>
    <label>SUV Inventory</label>
</ListView>